; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstring.c_Sp_charCodeAt.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstring.c_Sp_charCodeAt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NAN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Sp_charCodeAt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Sp_charCodeAt(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @checkstring(i32* %6, i32 0)
  store i8* %7, i8** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @js_tointeger(i32* %8, i32 1)
  store i32 %9, i32* %4, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i64 @js_runeat(i32* %10, i8* %11, i32 %12)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = icmp sgt i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %1
  %17 = load i32*, i32** %2, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @js_pushnumber(i32* %17, i64 %18)
  br label %24

20:                                               ; preds = %1
  %21 = load i32*, i32** %2, align 8
  %22 = load i64, i64* @NAN, align 8
  %23 = call i32 @js_pushnumber(i32* %21, i64 %22)
  br label %24

24:                                               ; preds = %20, %16
  ret void
}

declare dso_local i8* @checkstring(i32*, i32) #1

declare dso_local i32 @js_tointeger(i32*, i32) #1

declare dso_local i64 @js_runeat(i32*, i8*, i32) #1

declare dso_local i32 @js_pushnumber(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
